{
    "name": "InputsActions",
    "maps": [
        {
            "name": "Player1",
            "id": "4c3a9e9f-b7d1-44f7-b046-24f26dfb1a12",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4cf353f7-3813-42c5-8b55-805e3c12645b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "2a69f4a2-f89e-4010-8cbf-29e8a9980049",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "b2767534-8859-4109-b6cd-f506bd683e0e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1adaef53-a655-47de-8e68-06ab5cc5bd7c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c0adc64b-6cd5-4ed4-b1bc-b1730b34ae8c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7c7da5c1-7681-4bd0-b3f1-a996a1de2c36",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3fe3d30a-c177-4b13-b3fd-b0334ed8b5ef",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c7b81537-cd35-4644-9e5b-e7deb4b7961f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "80d6a24a-fb39-4fe0-a022-897fcd7172cf",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "60ba646e-6c0d-48d9-8de9-a066a2a81d81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "60b95c53-54a7-4594-9e05-998cfc72f543",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Arrows",
                    "id": "5b6974b1-b30d-40fe-8b17-5155d79c4a63",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "726014db-dfd9-4a1f-b7e7-114fe3126320",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9b29edd5-057a-4c7f-bd94-450c0bad3b9d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8edadacd-562e-4fd9-ae8b-46bb71f033b4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "88164aab-f178-4fd1-9983-4095ac478c15",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8802bf0e-26bd-4a4d-9004-f210cddfc387",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}